--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -15,4 +15,21 @@
     margin-right: 70px;
   }
 
+  &__button {
+    padding: 10px 16px;
+  
+    font-size: 12px;
+    text-transform: uppercase;
+    color: #2196f3;
+  
+    background-color: #fff;
+    border-radius: 5px;
+    border: none;
+  
+    &:hover {
+      cursor: pointer;
+    }
+  
+  }
+
 }
