feat: add text changing in header button depends on page hash

--- a/src/components/registration/modal/modal.scss
+++ b/src/components/registration/modal/modal.scss
@@ -51,6 +51,8 @@
   &__input {
     padding-left: 50px;
     margin-bottom: 15px;
+  
+    position: relative;
 
     width: 328px;
     height: 56px;
