--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,7 +3,7 @@
   padding-left: 30px;
   padding-right: 30px;
   height: 50px;
-  background-color: #2196F3;
+  background-color: #2196f3;
 
   display: flex;
   justify-content: space-between;
