--- a/src/components/shared/input/tooltip.scss
+++ b/src/components/shared/input/tooltip.scss
@@ -1,10 +1,10 @@
 .input__tooltip {
-  width: 100px;
-  height: 50px;
+  width: 200px;
+  height: 40px;
 
   position: absolute;
-  right: -10px;
   
   background-color: #fff;
-  color: #000;
+  color: #ff0000;
+  font-size: 10px;
 }
