--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,10 +13,11 @@ body {
   color: #fff;
 }
 
-.main {
+.game {
   min-height: calc(100vh - 50px);
 
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
