--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  perspective: 15rem;
+  perspective: 24rem;
+  min-height: 140px;
   
   &:hover > .card {
     // transform: translateZ(20px);
@@ -18,8 +19,8 @@
 
 .card {
   position: relative;
-  width: 80%;
-  height: 7rem;
+  width: 90%;
+  height: 90%;
   cursor: pointer;
   transform-style: preserve-3d;
   transform-origin: right;
@@ -39,7 +40,8 @@
   &__front {
     background-color: #fff;
     background-position: center;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
 
     &_red {
       -webkit-filter: invert(40%) grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(400%) contrast(2);
