--- a/src/components/best-score/best-score.scss
+++ b/src/components/best-score/best-score.scss
@@ -15,8 +15,15 @@
   }
 
   &__heading {
+    margin-bottom: 20px;
     font-size: 20px;
     font-weight: 500;
+  }
+  
+  &__message {
+    font-size: 14px;
+    font-style: italic;
+    text-align: center;
   }
 
   &__line-box {
