--- a/src/components/garage-page/garage-page.css
+++ b/src/components/garage-page/garage-page.css
@@ -6,9 +6,21 @@
   padding-left: 0;
 }
 
+.select-button, 
+.remove-button {
+  border-radius: 3px;
+  border: none;
+  height: 22px;
+  margin-right: 5px;
+}
+
 .car-item {
   margin-bottom: 10px;
   list-style: none;
+}
+
+.car-image {
+  display: flex;
 }
 
 .road {
@@ -18,9 +30,27 @@
 }
 
 .engine-buttons {
+  margin-top: 7px;
   margin-right: 15px;
   display: flex;
   flex-direction: column;
+}
+
+.start-button,
+.stop-button {
+  border-radius: 3px;
+  border: none;
+  height: 20px;
+  outline-style: none;
+}
+
+.start-button {
+  margin-bottom: 7px;
+  color: green;
+}
+
+.stop-button {
+  color: #6d0c1d;
 }
 
 .launch-pad {
