--- a/src/components/garage-page/garage-page.css
+++ b/src/components/garage-page/garage-page.css
@@ -6,6 +6,45 @@
   padding-left: 0;
 }
 
+.control-panel {
+  width: 320px;
+}
+
+.create-form,
+.update-form {
+  margin-bottom: 10px;
+  display: flex;
+}
+
+.form-btn {
+  border-radius: 3px;
+  border: none;
+  outline-style: none;
+  transition: all 0.5s;
+}
+
+.form-btn:hover:not(.update-btn[disabled])  {
+  cursor: pointer;
+  background-color: #ccc;
+}
+
+.race-btn,
+.reset-btn {
+  width: 60px;
+  text-transform: uppercase;
+}
+
+.create-form [type="text"],
+.update-form [type="text"]  {
+  flex-grow: 1;
+}
+
+.buttons-wrapper {
+  height: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .select-button, 
 .remove-button {
   border-radius: 3px;
