refactor: fix DRY & magic numbers

--- a/src/components/shared/input/input.scss
+++ b/src/components/shared/input/input.scss
@@ -6,3 +6,11 @@
   left: 10px;
   top: 60px;
 }
+
+.input_error  { 
+  border: 2px solid red !important; 
+} 
+
+.input_success {
+  border: 2px solid green !important;
+}
