--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -43,12 +43,12 @@
     background-size: contain;
     background-repeat: no-repeat;
 
-    &_red {
+    &_error {
       -webkit-filter: invert(40%) grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(400%) contrast(2);
       filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
     }
 
-    &_green {
+    &_success {
       -webkit-filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(50deg) saturate(1000%) contrast(0.8);
       filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(50deg) saturate(1000%) contrast(0.8);
     }
