--- a/src/components/registration/form/form.scss
+++ b/src/components/registration/form/form.scss
@@ -33,7 +33,7 @@
     border-radius: 4px 4px 0px 0px;
   
     &:focus {
-      border: none;
+      // border: none;
       outline-style: none;
     }
   }
