--- a/src/components/garage-page/garage-page.css
+++ b/src/components/garage-page/garage-page.css
@@ -96,3 +96,12 @@
   display: flex;
   align-items: flex-start;
 }
+
+.flag {
+  width: 30px;
+  height: 60px;
+  margin-right: 70px;
+  background-image: url('../../assets/finish.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
