refactor: delete typescript-air-bnb-pretier

--- a/src/components/garage-page/garage-page.css
+++ b/src/components/garage-page/garage-page.css
@@ -21,6 +21,7 @@
   border: none;
   outline-style: none;
   transition: all 0.5s;
+  text-transform: uppercase;
 }
 
 .form-btn:hover:not(.update-btn[disabled])  {
