--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  perspective: 24rem;
+  perspective: 40rem;
   min-height: 240px;
   
   &:hover > .card {
@@ -45,6 +45,8 @@
   &__image {
     width: 100%;
     height: 80%;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
