feat: add changing cards view accoring to mode

--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -50,6 +50,11 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    transition: ease all 0.3s;
+
+    &_game {
+      height: 100%;
+    }
   }
 
   &__back {
