--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -1,16 +1,19 @@
 .card__wrap {
-  flex: 0 0 33%;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 240px;
+  height: 230px;
   perspective: 40rem;
   min-height: 240px;
   
-  &:hover > .card {
-    cursor: pointer;
-    box-shadow: 0px 10px 24px rgba(0, 0, 0, 0.5);
+  &_hover {
+    &:hover > .card {
+      cursor: pointer;
+      box-shadow: 0px 10px 24px rgba(0, 0, 0, 0.5);
+    }
   }
-
+  
   &.flipped > .card { 
     transform: rotateY(180deg) translateX(-100%);
     transform-origin: left;
@@ -40,6 +43,17 @@
   &__front {
     display: flex;
     flex-direction: column;
+
+    &_frontground {
+      position: absolute;
+      z-index: 11;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 3px;
+      background-color: rgba(0, 0, 0, 0.3);
+    }
   }
 
   &__image {
