--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -84,4 +84,12 @@
     justify-content: space-around;
     align-items: center;
   }
+
+  &__flip-button {
+    width: 22px;
+    height: 22px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
