--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,14 +1,14 @@
 .header {
   padding-left: 40px;
   padding-right: 40px;
-  height: 60px;
+  height: 100px;
   background-color: rgba(39, 236, 115, 0.808);
   color: #fff;
   display: flex;
 
   &__content {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     flex-grow: 1;
   }
