--- a/src/components/SideMenu/sideMenu.scss
+++ b/src/components/SideMenu/sideMenu.scss
@@ -1,10 +1,10 @@
 /* Position and sizing of burger button */
 .bm-burger-button {
-  position: fixed;
+  position: absolute;
   width: 36px;
   height: 30px;
   left: 36px;
-  top: 36px;
+  top: 24px;
 }
 
 /* Color/shape of burger icon bars */
@@ -42,6 +42,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
   background: #373a47;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
+  overflow-y: hidden !important;
 }
 
 /* Morph shape necessary with bubble or elastic */
