--- a/src/Pages/Categories/categories.scss
+++ b/src/Pages/Categories/categories.scss
@@ -1,4 +1,47 @@
-.main__categories-wrap {
+.categories {
+  padding-bottom: 14px;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
+
+.category {
+  text-decoration: none;
+  transition: ease all 0.2s;
+
+  &-card-wrap {
+    width: 300px;
+    height: 300px;
+    border-radius: 4px;
+  }
+  
+  &-card {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    height: 90%;
+    font-size: 1.2em;
+  
+    &__imgage-wrap {
+      width: 100%;
+      height: 85%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      border-radius: 4px;
+    }
+
+    &__name {
+      color: #fff;
+      background: rgba(0,0,0,0.5);
+    }
+  }
+
+  &:hover {
+    box-shadow: 6px 6px 13px rgba(0,0,0,0.5);
+  }
+}
+
