--- a/src/components/SideMenu/sideMenu.scss
+++ b/src/components/SideMenu/sideMenu.scss
@@ -4,6 +4,10 @@
   font-weight: 500;
   text-decoration: none;
 
+  &_main {
+    color: #66f143;
+  }
+
   &:hover {
     color:rgb(211, 18, 92)
   }
@@ -19,12 +23,12 @@
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #373a47;
+  background: #fff;
 }
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-  background: #a90000;
+  background: #e64cc8;
 }
 
 /* Position and sizing of clickable cross button */
