--- a/src/Statistic/statistic.scss
+++ b/src/Statistic/statistic.scss
@@ -1,5 +1,31 @@
 .statistic { 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-left: 40px;
+  width: 80vw;
+  max-width: 1000px;
+
+  &__buttons-wrap {
+    margin-left: 40px;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+  }
+
+  &__repeat-btn,
+  &__reset-btn {
+    padding: 8px;
+    border-radius: 4px;
+    border: none;
+    transition: ease all 0.3s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: darken($color: #efefef, $amount: 5);
+    }
+  }
 
   &__tabel {
     text-align: center;
