--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -41,3 +41,25 @@
     background-color: darken($color: #ffeaea, $amount: 2);
   }
 }
+
+@media screen and (max-width: 470px) {
+
+    .header {
+      padding-right: 0;
+      display: flex;
+      justify-content: flex-end;
+      height: 120px;
+
+      &__content {
+        padding-right: 15px;
+        padding-bottom: 10px;
+        flex-direction: column;
+        align-items: flex-end;
+      }
+    }
+
+    .switch-button {
+      margin-bottom: 20px;
+      align-self: flex-end;
+    }
+}
