--- a/src/Pages/Admin/admin.scss
+++ b/src/Pages/Admin/admin.scss
@@ -34,6 +34,53 @@
     flex-direction: column;
     justify-content: space-around;
     border: 1px solid #000;
+
+    &-audio-wrap {
+      display: flex;
+      align-items: center;
+    }
+
+    &-audio-icon {
+      margin-left: 15px;
+      width: 26px;
+      height: 26px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    &-image-wrapper {
+      display: flex;
+      position: relative;
+    }
+
+    &-image-icon {
+      margin-left: 15px;
+      width: 26px;
+      height: 26px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    &-image {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      width: 150px;
+      height: 100px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+    }
   }
 
 }
