--- a/src/Pages/Admin/admin.scss
+++ b/src/Pages/Admin/admin.scss
@@ -86,5 +86,16 @@
       background: rgba(255, 00, 00, 0.6);
     }
   }
+  &__edit-icon {
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  
 }
