--- a/src/Pages/Admin/NewCardModal/newCardModal.scss
+++ b/src/Pages/Admin/NewCardModal/newCardModal.scss
@@ -10,18 +10,24 @@
   align-items: center;
 
   &__window {
-    width: 400px;
-    height: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    width: 400px;
+    height: 200px;
     background: darkgrey;
     color: #fff;
   }
 
+  &__form {
+    display: flex;
+    flex-direction: column;
+  }
+
   &__button-wrap {
-    width: 200px;
+    margin-top: 20px;
+    width: 297px;
     display: flex;
     justify-content: space-between;
   }
