--- a/src/Pages/Categories/categories.scss
+++ b/src/Pages/Categories/categories.scss
@@ -6,42 +6,52 @@
 }
 
 .category {
+
   text-decoration: none;
   transition: ease all 0.2s;
 
-  &-card-wrap {
-    width: 300px;
-    height: 300px;
-    border-radius: 4px;
-  }
-  
   &-card {
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    width: 90%;
-    height: 90%;
-    font-size: 1.2em;
-  
-    &__imgage-wrap {
-      width: 100%;
-      height: 85%;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      border-radius: 4px;
-    }
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  height: 90%;
+  font-size: 1.2em;
 
-    &__name {
-      color: #fff;
-      background: rgba(0,0,0,0.5);
-    }
-  }
+      &-wrap {
+        width: 300px;
+        height: 300px;
+        border-radius: 4px;
+      }
+    
+      &__imgage-wrap {
+        width: 100%;
+        height: 85%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: 4px;
+      }
 
-  &:hover {
-    box-shadow: 6px 6px 13px rgba(0,0,0,0.5);
+      &__info {
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        justify-content: space-around;
+      }
+
+      &__name {
+        color: #fff;
+        background: rgba(0,0,0,0.5);
+      }
+
+    &:hover {
+      box-shadow: 6px 6px 13px rgba(0,0,0,0.5);
+    }
   }
 }
 
