--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -19,6 +19,10 @@
     flex-grow: 1;
   }
 
+  &__buttons-wrap {
+    display: flex;
+  }
+
   &__admin-button-link {
     display: flex;
   }
@@ -64,7 +68,7 @@
   }
 }
 
-@media screen and (max-width: 470px) {
+@media screen and (max-width: 500px) {
 
     .header {
       padding-right: 0;
